--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,8 @@
     "google-auth-library": "^8.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
