--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.9.2",
     "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.14"
+    "mongoose": "^5.13.14",
+    "uuid": "^8.3.2"
   }
 }
