--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
+    "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
   }
 }
